force-app/main/default/objects/Team__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <label>Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Birmingham</fullName>
            </value>
            <value>
                <fullName>Bristol</fullName>
            </value>
            <value>
                <fullName>Cardiff</fullName>
            </value>
            <value>
                <fullName>Chelmsford</fullName>
            </value>
            <value>
                <fullName>Leeds</fullName>
            </value>
            <value>
                <fullName>Liverpool</fullName>
            </value>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>Manchester</fullName>
            </value>
            <value>
                <fullName>Newcastle</fullName>
            </value>
            <value>
                <fullName>Southampton</fullName>
            </value>
            <value>
                <fullName>Swansea</fullName>
            </value>
            <value>
                <fullName>Toronto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>