force-app/main/default/objects/Team__c/fields/Team_Type__c.field-meta.xml
<CustomField>
    <fullName>Team_Type__c</fullName>
    <label>Team Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Team_Type</valueSetName>
    </valueSet>
</CustomField>